--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section class="top-baner">
+        <div class="half-width">
+            <h1>Welcome to </h1>
+            <h1><span class="name-color">Yahia Islam</span> world</h1>
+            <h3>I am a Web Developar and Digital Marketar</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium eveniet ea sequi, magnam eum officiis,
+                corrupti
+                repudiandae praesentium quaerat in cupiditate facilis alias provident numquam. Totam molestiae eveniet
+                praesentium
+                voluptas animi dolore delectus, distinctio officiis laboriosam quo magni porro ipsam.</p>
+                <a class="link-button" target="_blank" href="https://www.google.com/">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/hardy.png" alt="Photo">
+        </div>
+    </section>
     
 </body>
 </html>
